[project]
name = "orbital-launcher"
version = "1.0.0"
description = "3D spherical icon cloud application launcher for Linux"
requires-python = ">=3.10"
dependencies = [
    "pycairo",
    "PyGObject",
]

[project.scripts]
orbital-launcher = "orbital_launcher.app:main"

[project.urls]
Homepage = "https://github.com/user/orbital-launcher"
